# PR2-Kinetic-Moveit

./: .gitignore  .gitmodules  README.md  frames.gv  install PR2sim  install PR2sim.sh  install_PR2sim.md  install_PR2sim.sh  log.txt
logs/actioncontroller/: build.check.003.log.stderr  build.check.004.log.stderr  build.check.005.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.014.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.022.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.028.log.stderr  build.make.031.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.035.log.stderr  build.make.036.log.stderr  build.make.037.log.stderr  build.make.038.log.stderr  build.make.039.log.stderr  (+19 more)
logs/cloud_merger/: build.make.000.log.stderr
logs/controller_interface/: build.cmake.001.log.stderr
logs/controller_manager/: build.cmake.000.log.stderr  build.make.001.log.stderr
logs/ethercat_trigger_controllers/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/gazebo_moveIT_objects_synchroniser/: build.make.000.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr
logs/gazebo_moveit_objects_synchroniser/: build.make.000.log.stderr  build.make.029.log.stderr
logs/kinect2_registration/: build.cmake.000.log.stderr  build.make.003.log.stderr
logs/kinect2_viewer/: build.make.000.log.stderr  build.make.002.log.stderr
logs/openni_camera/: build.make.000.log.stderr
logs/pr2_calibration_controllers/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/pr2_common_action_msgs/: build.make.000.log.stderr
logs/pr2_controller_manager/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/pr2_gazebo_plugins/: build.make.000.log.stderr  build.make.001.log.stderr
logs/pr2_mechanism_controllers/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr
logs/pr2_mechanism_model/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/pr2_moveit_plugins/: build.cmake.000.log.stderr
logs/robosherlock/: build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.003.log.stderr
logs/robot_mechanism_controllers/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/uimacpp_ros/: build.make.000.log.stderr  build.make.003.log.stderr
src/actioncontroller/: CMakeLists.txt  package.xml
src/actioncontroller/action/: ActionController.action
src/actioncontroller/cfg/: grasp.yaml
src/actioncontroller/include/: ActionControllerTools.h  GraspGenerator.h  PickGenerator.h  PlaceGenerator.h
src/actioncontroller/msg/: actiongoal.msg
src/actioncontroller/src/: ActionController.cpp  ActionControllerTools.cpp  GraspGenerator.cpp  MakeAPile.cpp  PickGenerator.cpp  PlaceGenerator.cpp  SetUp.cpp  actionControllerTools.cpp  moveit_picker.cpp  setUp.cpp  simplePick.cpp  tuckArm.cpp
src/cloud_merger/: CMakeLists.txt
src/gazebo_moveIT_objects_synchroniser/: CMakeLists.txt  package.xml
src/gazebo_moveIT_objects_synchroniser/src/: GazeboMeshManager.cpp  GazeboObjectListMaker.cpp  gazebo_moveIT_objects_synchroniser.cpp
src/gazebo_moveit_objects_synchroniser/: CMakeLists.txt  package.xml
src/gazebo_moveit_objects_synchroniser/msg/: CollisionObjectArray.msg
src/gazebo_moveit_objects_synchroniser/src/: GazeboMeshManager.cpp  GazeboMoveITObjectConverter.cpp  GazeboObjectListMaker.cpp  Gazebo_moveit_objects_synchroniser.cpp
src/gazebo_tf_broadcaster/: CMakeLists.txt  package.xml
src/jsk_moveit_object_synchroniser/: CMakeLists.txt  package.xml
src/jsk_moveit_object_synchroniser/src/: ObjectTopicHandler.cpp  jsk_moveit_object_synchroniser.cpp
src/jsk_moveit_object_synchroniser/test/: jsk_moveit_Test.cpp
src/laas_sherlock/: CMakeLists.txt  package.xml
src/laas_sherlock/cmake/: laas_sherlock_config.cmake
src/laas_sherlock/launch/: rs.launch
src/laas_sherlock/src/: BananaAnnotator.cpp
src/laas_vision_visp/: CMakeLists.txt  package.xml
src/moveit_custom_msgs/: CMakeLists.txt  package.xml
src/pickandplacecontroller/: CMakeLists.txt  package.xml
src/pickplace_action_interface/: CMakeLists.txt  package.xml
src/pickplacedemo/: CMakeLists.txt  package.xml
src/pickplacedemo/cfg/: kinematics.yaml  pr2_arm_controllers.yaml
src/pickplacedemo/gazebo_camera_calibration/: ir.yaml  rgb.yaml
src/pickplacedemo/launch/: blue_cube.launch  green_cube.launch  jsk_cloud_color_filtering.launch  (+27 more)
src/point_cloud_from_laser_scan/: package.xml
src/pr2_demo_controller/: CMakeLists.txt  package.xml
src/robosherlock_msgs/: CMakeLists.txt
src/rosplan_simple_dispatcher/: CMakeLists.txt  package.xml
src/uimacpp_ros/: CMakeLists.txt
src/uimacpp_ros/src/framework/: CMakeLists.txt  taespecifierbuilder.cpp
src/uimacpp_ros/src/framework/include/uima/: taespecifierbuilder.hpp
src/uimacpp_ros/src/utils/: CMakeLists.txt
src/uwds_moveit_bridge/: CMakeLists.txt  package.xml  plugins.xml  rosdoc.yaml
src/uwds_moveit_scene_publisher/: CMakeLists.txt  package.xml  plugins.xml
(+130 files in other folders)
