AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} ${PROJECT_NAME}_LIB_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../cas ${PROJECT_NAME}_LIB_CAS_SRCS)
AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/../jni ${PROJECT_NAME}_LIB_JNI_SRCS)

SET(SOURCES
  ${${PROJECT_NAME}_LIB_SRCS}
  ${${PROJECT_NAME}_LIB_CAS_SRCS}
  ${${PROJECT_NAME}_LIB_JNI_SRCS}
  )

ADD_LIBRARY(uimacpp_ros SHARED ${SOURCES})

# TARGET_COMPILE_OPTIONS(uima PRIVATE -Wno-deprecated)
target_link_libraries(uimacpp_ros ${catkin_LIBRARIES})

FIND_PACKAGE(XercesC)
IF(XercesC_FOUND)
  INCLUDE_DIRECTORIES(${XercesC_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(uimacpp_ros ${XercesC_LIBRARIES})
ELSE()
  MESSAGE(FATAL_ERROR "XercesC library not found")
ENDIF(XercesC_FOUND)

FIND_PACKAGE(APR)
IF(APR_FOUND)
  INCLUDE_DIRECTORIES(${APR_INCLUDE_DIR}, ${APRUTIL_INCLUDE_DIR})
  TARGET_LINK_LIBRARIES(uimacpp_ros ${APR_LIBRARIES} ${APRUTIL_LIBRARIES})
ELSE()
  MESSAGE(FATAL_ERROR "APR library not found")
ENDIF(APR_FOUND)

FIND_PACKAGE(JNI)
IF(JNI_FOUND)
  INCLUDE_DIRECTORIES(${JNI_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(uimacpp_ros ${JNI_LIBRARIES})
ELSE()
  MESSAGE(FATAL_ERROR "JNI library not found")
ENDIF(JNI_FOUND)

FIND_PACKAGE(ICU)
IF(ICU_FOUND)
  INCLUDE_DIRECTORIES(${ICU_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(uimacpp_ros ${ICU_LIBRARIES})
ELSE()
  MESSAGE(FATAL_ERROR "ICU library not found")
ENDIF(ICU_FOUND)

# target_link_libraries(uima)
INCLUDE_DIRECTORIES(uimacpp_ros PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(uimacpp_ros PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(uimacpp_ros PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../cas/include)
INCLUDE_DIRECTORIES(uimacpp_ros PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../jni/include)
INCLUDE_DIRECTORIES(uimacpp_ros PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../cas)
INCLUDE_DIRECTORIES(uimacpp_ros PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../jni)
SET_TARGET_PROPERTIES(uimacpp_ros PROPERTIES VERSION 2.4.1 SOVERSION 2)

########### install files ###############
INSTALL(TARGETS uimacpp_ros DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../cas/include/uima DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
INSTALL(DIRECTORY  ${CMAKE_CURRENT_SOURCE_DIR}/../jni/include/uima DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/uima DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
